--- a/pom.xml
+++ b/pom.xml
@@ -19,17 +19,16 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <azure.functions.java.library.version>1.4.2</azure.functions.java.library.version>
         <azure.functions.maven.plugin.version>1.11.0</azure.functions.maven.plugin.version>
 
         <!-- customize those two properties. The functionAppName should be unique across Azure -->
         <functionResourceGroup>my-spring-function-resource-group</functionResourceGroup>
-        <functionAppName>my-spring-function</functionAppName>
-
-        <functionAppRegion>westeurope</functionAppRegion>
+        <functionAppName>jd-spring-function</functionAppName>
+        <functionAppRegion>southeastasia</functionAppRegion>
         <stagingDirectory>${project.build.directory}/azure-functions/${functionAppName}</stagingDirectory>
         <start-class>com.example.DemoApplication</start-class>
     </properties>
@@ -44,6 +43,12 @@
             <artifactId>spring-cloud-starter-function-webflux</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
 
         <!-- Test -->
         <dependency>
@@ -121,8 +126,12 @@
                     <resourceGroup>${functionResourceGroup}</resourceGroup>
                     <appName>${functionAppName}</appName>
                     <region>${functionAppRegion}</region>
+                    <deploymentSlot>
+                        <name>bkp</name>
+
+                    </deploymentSlot>
                     <runtime>
-                        <os>linux</os>
+                        <os>windows</os>
                         <javaVersion>11</javaVersion>
                     </runtime>
                     <appSettings>
