--- a/.github/workflows/master_jd-spring-function(bkp).yml
+++ b/.github/workflows/master_jd-spring-function(bkp).yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@main
 
     - name: Setup Java Sdk ${{ env.JAVA_VERSION }}
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@main
       with:
         java-version: ${{ env.JAVA_VERSION }}
 
