--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.0</version>
+        <version>2.5.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -221,8 +221,8 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
+   <!-- <repositories>
+        &lt;!&ndash;<repository>
             <id>spring-snapshots</id>
             <name>Spring Snapshots</name>
             <url>https://repo.spring.io/libs-snapshot-local</url>
@@ -240,7 +240,7 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>
+        </repository>&ndash;&gt;
         <repository>
             <id>spring-releases</id>
             <name>Spring Releases</name>
@@ -249,8 +249,8 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-    </repositories>
-    <pluginRepositories>
+    </repositories>-->
+   <!-- <pluginRepositories>
         <pluginRepository>
             <id>spring-snapshots</id>
             <name>Spring Snapshots</name>
@@ -278,5 +278,5 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
-    </pluginRepositories>
+    </pluginRepositories>-->
 </project>
