--- a/.github/workflows/master_jd-spring-function(bkp).yml
+++ b/.github/workflows/master_jd-spring-function(bkp).yml
@@ -25,6 +25,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: ${{ env.JAVA_VERSION }}
+        credentials: ${{ secrets.MONGODB_CONNECTION }}
 
     - name: 'Restore Project Dependencies Using Mvn'
       shell: pwsh
