--- a/.github/workflows/master_jd-spring-function(bkp).yml
+++ b/.github/workflows/master_jd-spring-function(bkp).yml
@@ -27,9 +27,9 @@ jobs:
         java-version: ${{ env.JAVA_VERSION }}
 
     - name: 'Restore Project Dependencies Using Mvn'
-      with:
-        credentials: ${{ secrets.MONGODB_CONNECTION }}
       shell: pwsh
+      env:
+        MONGODB_CONNECTION: ${{ secrets.MONGODB_CONNECTION }}
       run: |
         pushd './${{ env.PACKAGE_DIRECTORY }}'
         mvn clean package
